# Memory-Types-Simulation

./: .gitignore  CMakeLists.txt  README.md  build-project.sh  download-dependencies.sh  run-project.sh
code/source/: define.h  jporta_test.cpp  memory.cpp  memory.h  memtrace.cpp  peripheral.cpp  peripheral.h  processor.cpp  processor.h  serializable.h
